; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/avifil32/extr_api.c_AVIFILE_GetFileHandlerByExtension.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/avifil32/extr_api.c_AVIFILE_GetFileHandlerByExtension.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FALSE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [25 x i8] c"AVIFile\\Extensions\\%.3ls\00", align 1
@HKEY_CLASSES_ROOT = common dso_local global i32 0, align 4
@ERROR_SUCCESS = common dso_local global i64 0, align 8
@S_OK = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32)* @AVIFILE_GetFileHandlerByExtension to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @AVIFILE_GetFileHandlerByExtension(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca [25 x i32], align 16
  %7 = alloca [100 x i32], align 16
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %10 = load i32, i32* %4, align 4
  %11 = call i32* @wcsrchr(i32 %10, i8 signext 46)
  store i32* %11, i32** %8, align 8
  %12 = getelementptr inbounds [100 x i32], [100 x i32]* %7, i64 0, i64 0
  %13 = call i32 @ARRAY_SIZE(i32* %12)
  store i32 %13, i32* %9, align 4
  %14 = load i32*, i32** %8, align 8
  %15 = icmp eq i32* %14, null
  br i1 %15, label %16, label %18

16:                                               ; preds = %2
  %17 = load i32, i32* @FALSE, align 4
  store i32 %17, i32* %3, align 4
  br label %39

18:                                               ; preds = %2
  %19 = load i32*, i32** %8, align 8
  %20 = getelementptr inbounds i32, i32* %19, i32 1
  store i32* %20, i32** %8, align 8
  %21 = getelementptr inbounds [25 x i32], [25 x i32]* %6, i64 0, i64 0
  %22 = load i32*, i32** %8, align 8
  %23 = call i32 @wsprintfA(i32* %21, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0), i32* %22)
  %24 = load i32, i32* @HKEY_CLASSES_ROOT, align 4
  %25 = getelementptr inbounds [25 x i32], [25 x i32]* %6, i64 0, i64 0
  %26 = getelementptr inbounds [100 x i32], [100 x i32]* %7, i64 0, i64 0
  %27 = call i64 @RegQueryValueA(i32 %24, i32* %25, i32* %26, i32* %9)
  %28 = load i64, i64* @ERROR_SUCCESS, align 8
  %29 = icmp ne i64 %27, %28
  br i1 %29, label %30, label %32

30:                                               ; preds = %18
  %31 = load i32, i32* @FALSE, align 4
  store i32 %31, i32* %3, align 4
  br label %39

32:                                               ; preds = %18
  %33 = getelementptr inbounds [100 x i32], [100 x i32]* %7, i64 0, i64 0
  %34 = load i32, i32* %5, align 4
  %35 = call i64 @AVIFILE_CLSIDFromString(i32* %33, i32 %34)
  %36 = load i64, i64* @S_OK, align 8
  %37 = icmp eq i64 %35, %36
  %38 = zext i1 %37 to i32
  store i32 %38, i32* %3, align 4
  br label %39

39:                                               ; preds = %32, %30, %16
  %40 = load i32, i32* %3, align 4
  ret i32 %40
}

declare dso_local i32* @wcsrchr(i32, i8 signext) #1

declare dso_local i32 @ARRAY_SIZE(i32*) #1

declare dso_local i32 @wsprintfA(i32*, i8*, i32*) #1

declare dso_local i64 @RegQueryValueA(i32, i32*, i32*, i32*) #1

declare dso_local i64 @AVIFILE_CLSIDFromString(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
